# ros_teleoperate

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  conf.ini  package.xml  package.xml~  setup.py~
CPR_mover/: CMakeLists.txt  README  package.xml  setup.py
CPR_mover/include/: cpr_KinematicMover.h  cpr_Matrix4.h
CPR_mover/scripts/: control_cpr.py
CPR_mover/src/: cpr_KinematicMover.cpp  cpr_ik.cpp
al5d/: CMakeLists.txt  README.md  package.xml
al5d/scripts/: control_al5d.py  local_config.py  publish_move_pose.py  record_demonstration.py  test_network_robot.py
al5d/src/: leap_al5d.cpp
controllers/ps4_controller/: README  README~  ps4_controller.py
controllers/psmove/: psmove_controller.py  publish_move_pose.py
mico_controller/: CMakeLists.txt  package.xml  setup.py
mico_controller/scripts/: RNN_control.py  cartesian_action_server.py  control_mico.py
record_demonstration/: local_config.py  record.py
